--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exemplo = cv2.imread(\"imagem.jpg\", 3)\n",
+    "exemplo = cv2.imread(\"img/imagem.jpg\", 3)\n",
     "exemplo = cv2.cvtColor(exemplo, cv2.COLOR_BGR2RGB)"
    ]
   },
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x138872a58>"
+       "<matplotlib.image.AxesImage at 0x12cece908>"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,16 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x13dc752b0>"
+       "<matplotlib.image.AxesImage at 0x111668438>"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -277,9 +277,9 @@
     }
    ],
    "source": [
-    "normal = cv2.cvtColor(cv2.imread(\"normal.png\", 3), cv2.COLOR_BGR2RGB)\n",
-    "protan_control = cv2.cvtColor(cv2.imread(\"protan.png\", 3), cv2.COLOR_BGR2RGB)\n",
-    "deutan_control = cv2.cvtColor(cv2.imread(\"deutan.png\", 3), cv2.COLOR_BGR2RGB)\n",
+    "normal = cv2.cvtColor(cv2.imread(\"img/normal.png\", 3), cv2.COLOR_BGR2RGB)\n",
+    "protan_control = cv2.cvtColor(cv2.imread(\"img/protan.png\", 3), cv2.COLOR_BGR2RGB)\n",
+    "deutan_control = cv2.cvtColor(cv2.imread(\"img/deutan.png\", 3), cv2.COLOR_BGR2RGB)\n",
     "\n",
     "plt.figure(figsize=(12,8))\n",
     "plt.subplot(121)\n",
@@ -307,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x13bcf0b70>"
+       "<matplotlib.image.AxesImage at 0x111fbb6a0>"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,20 +370,20 @@
     "Consiste em transformar a imagem RGB para o plano LMS, realizar transformações nas cores presentes para descrescer uma quantidade certa de cada componente de cor e transformar novamente para o domínio RGB. Uma das vantagens dessa implementação é que ela tem suporte para tritanopia.\n",
     "\n",
     "1. Correção de Gamma, usando uma troca de métrica\n",
-    "<img src=\"files/CBS1.png\" width=\"300\">\n",
+    "<img src=\"files/img/CBS1.png\" width=\"300\">\n",
     "2. Transformação para LMS\n",
-    "<img src=\"files/CBS2.png\" width=\"400\">\n",
+    "<img src=\"files/img/CBS2.png\" width=\"400\">\n",
     "3. Transformações de daltonismo\n",
     "Para protanopia\n",
-    "<img src=\"files/SP.png\" width=\"300\">\n",
+    "<img src=\"files/img/SP.png\" width=\"300\">\n",
     "Para deuteranopia\n",
-    "<img src=\"files/SD.png\" width=\"300\">\n",
+    "<img src=\"files/img/SD.png\" width=\"300\">\n",
     "Para tritanopia\n",
-    "<img src=\"files/ST.png\" width=\"300\">\n",
+    "<img src=\"files/img/ST.png\" width=\"300\">\n",
     "4. Conversão de volta para RGB\n",
-    "<img src=\"files/CBS3.png\" width=\"300\">\n",
+    "<img src=\"files/img/CBS3.png\" width=\"300\">\n",
     "5. Recorreção de Gamma\n",
-    "<img src=\"files/CBS3.png\" width=\"300\">\n",
+    "<img src=\"files/img/CBS3.png\" width=\"300\">\n",
     "\n",
     "Fonte: https://ixora.io/projects/colorblindness/color-blindness-simulation-research/\n",
     "\n"
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
     "    if int > Vcolor:\n",
     "        return 255*(int*12.92)\n",
     "    else:\n",
-    "        return 255*(((int**0.41666)*1.055)-0.055)\n",
+    "        return 255*(((np.abs(int)**0.41666)*1.055)-0.055)\n",
     "        \n",
     "\n",
     "def transforma_cbs(img, tipo):\n",
@@ -469,24 +469,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in power\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x13965c7f0>"
+       "<matplotlib.image.AxesImage at 0x1320fed68>"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -550,24 +542,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in power\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x13fc1d470>"
+       "<matplotlib.image.AxesImage at 0x131303358>"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -622,24 +606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in power\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x140d4deb8>"
+       "<matplotlib.image.AxesImage at 0x1324de9e8>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
